--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 		<div class="bubble"></div> 
 	</div>
 	<div class="control-panel">
-	    <button class="js-showHide">Show/Hide</button>
-	    <button class="js-alfredTalk">Say something</button>	
+		<input type="text" class="js-firstNumber">
+		<input type="text" class="js-secondNumber">
+	    <button class="js-count">Just Do It</button>	
 	</div>
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
