--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 	<div class="control-panel">
 		<input type="text" class="js-firstNumber">
 		<input type="text" class="js-secondNumber">
-	    <button class="js-count">Just Do It</button>	
+	    <div class="calc-panel">
+	        <button class="js-plus">+</button>
+	        <button class="js-minus">-</button>	
+	        <button class="js-multiply">*</button>
+	        <button class="js-divide">/</button>
+	    </div>
 	</div>
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/js/script.js"></script>
-</body>
+</body> 
 </html>
