--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 </head>
 <body>
+	<div class="test-array">
+	</div>
 	<div class="alfred">
 		<img class="alfred-pic" src="assets/img/alfred.png">
 		<div class="bubble"></div> 
@@ -18,6 +20,11 @@
 	        <button class="js-minus">-</button>	
 	        <button class="js-multiply">*</button>
 	        <button class="js-divide">/</button>
+	    </div>
+	    <div class="var-panel">
+	    	<button class="js-superHero">SuperHero</button>
+	    	<button class="js-change">Height</button>
+	    	<button class="js-addElem">Add Element</button>
 	    </div>
 	</div>
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
